Some content added and small tweaks..

--- a/Foody.Web/Views/Administration/_RecipesPartial.cshtml
+++ b/Foody.Web/Views/Administration/_RecipesPartial.cshtml
@@ -84,7 +84,7 @@
                                 <option value="tableSalt">Table Salt</option>
                                 <option value="garlic">Garlic</option>
                             </select>
-                            <input type="number" name="1|Amountmusaka" id="1|Amountmusaka" value="200" placeholder="Please enter amount.."/>
+                            <input type="number" name="1|Amountmusaka" id="1|Amountmusaka" value="200" placeholder="Please enter amount.." />
                         </li>
                         <li class="food-item">
                             <i class="fas fa-times remove-button"></i>
@@ -98,7 +98,125 @@
                                 <option value="tableSalt">Table Salt</option>
                                 <option value="garlic">Garlic</option>
                             </select>
-                            <input type="number" name="2|Amountmusaka" id="2|Amountmusaka" value="120" placeholder="Please enter amount.."/>
+                            <input type="number" name="2|Amountmusaka" id="2|Amountmusaka" value="120" placeholder="Please enter amount.." />
+                        </li>
+                    </ul>
+
+                    <button class="add-button">Add Food Item</button>
+                </div>
+
+                <input type="submit" class="submit-button" value="Edit Recipe" />
+            </form>
+        </li>
+
+        <li class="items-area-item">
+            <div class="toggle-area">
+                <p class="name-search">Shopska Salad</p>
+                <p>107 kcal per 100 grams</p>
+                <p>High Usage</p>
+            </div>
+
+            <form class="on-click-area" action="#">
+                <div class="image-and-description">
+                    <div class="image-container">
+                        <img src="https://cdn.deliciousmeetshealthy.com/wp-content/uploads/2015/05/shopska-salad-3.jpg" />
+                    </div>
+                    <textarea class="item-description">Shopska salad, also known as Bulgarian salad, is a Bulgarian cold salad popular throughout the Balkans and Central Europe. It is made from tomatoes, cucumbers, onion/scallions, raw or roasted peppers, sirene, and parsley.</textarea>
+                </div>
+
+                <div class="data">
+                    <label for="shopskaName">Name:</label>
+                    <input type="text" name="shopskaName" id="shopskaName" value="Shopska Salad" />
+
+                    <h6 class="recipe-head">Recipe content (food items in grams):</h6>
+
+                    <ul class="food-items">
+                        <li class="food-item">
+                            <i class="fas fa-times remove-button"></i>
+                            <select name="1|Itemshopska" id="1|Itemshopska">
+                                <option disabled> -- food items -- </option>
+                                <option value="potato" selected>Potatoes</option>
+                                <option value="tomato">Tomatoes</option>
+                                <option value="eggs">Eggs</option>
+                                <option value="flour">Flour</option>
+                                <option value="oliveOil">Olive Oil</option>
+                                <option value="tableSalt">Table Salt</option>
+                                <option value="garlic">Garlic</option>
+                            </select>
+                            <input type="number" name="1|Amountshopska" id="1|Amountshopska" value="200" placeholder="Please enter amount.." />
+                        </li>
+                        <li class="food-item">
+                            <i class="fas fa-times remove-button"></i>
+                            <select name="2|Itemshopska" id="2|Itemshopska">
+                                <option disabled> -- food items -- </option>
+                                <option value="potato">Potatoes</option>
+                                <option value="tomato">Tomatoes</option>
+                                <option value="eggs" selected>Eggs</option>
+                                <option value="flour">Flour</option>
+                                <option value="oliveOil">Olive Oil</option>
+                                <option value="tableSalt">Table Salt</option>
+                                <option value="garlic">Garlic</option>
+                            </select>
+                            <input type="number" name="2|Amountshopska" id="2|Amountshopska" value="120" placeholder="Please enter amount.." />
+                        </li>
+                    </ul>
+
+                    <button class="add-button">Add Food Item</button>
+                </div>
+
+                <input type="submit" class="submit-button" value="Edit Recipe" />
+            </form>
+        </li>
+
+        <li class="items-area-item">
+            <div class="toggle-area">
+                <p class="name-search">Tarator</p>
+                <p>153 kcal per 100 grams</p>
+                <p>High Usage</p>
+            </div>
+
+            <form class="on-click-area" action="#">
+                <div class="image-and-description">
+                    <div class="image-container">
+                        <img src="https://images.eatthismuch.com/site_media/img/949317_Shiratori_112c1954-07ec-411b-8484-9fa776d78b2e.jpg" />
+                    </div>
+                    <textarea class="item-description">Tarator is Bulgarian cold cucumber soup made with yogurt, walnuts, and dill. It can also be made thicker and served as a dip.</textarea>
+                </div>
+
+                <div class="data">
+                    <label for="taratorName">Name:</label>
+                    <input type="text" name="taratorName" id="taratorName" value="Tarator" />
+
+                    <h6 class="recipe-head">Recipe content (food items in grams):</h6>
+
+                    <ul class="food-items">
+                        <li class="food-item">
+                            <i class="fas fa-times remove-button"></i>
+                            <select name="1|Itemtarator" id="1|Itemtarator">
+                                <option disabled> -- food items -- </option>
+                                <option value="potato" selected>Potatoes</option>
+                                <option value="tomato">Tomatoes</option>
+                                <option value="eggs">Eggs</option>
+                                <option value="flour">Flour</option>
+                                <option value="oliveOil">Olive Oil</option>
+                                <option value="tableSalt">Table Salt</option>
+                                <option value="garlic">Garlic</option>
+                            </select>
+                            <input type="number" name="1|Amounttarator" id="1|Amountarator" value="200" placeholder="Please enter amount.." />
+                        </li>
+                        <li class="food-item">
+                            <i class="fas fa-times remove-button"></i>
+                            <select name="2|Itemtarator" id="2|Itemtarator">
+                                <option disabled> -- food items -- </option>
+                                <option value="potato">Potatoes</option>
+                                <option value="tomato">Tomatoes</option>
+                                <option value="eggs" selected>Eggs</option>
+                                <option value="flour">Flour</option>
+                                <option value="oliveOil">Olive Oil</option>
+                                <option value="tableSalt">Table Salt</option>
+                                <option value="garlic">Garlic</option>
+                            </select>
+                            <input type="number" name="2|Amounttarator" id="2|Amounttarator" value="120" placeholder="Please enter amount.." />
                         </li>
                     </ul>
 
