--- a/Foody.Web/Views/Home/Index.cshtml
+++ b/Foody.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div class="site-sections-container">
-        <a href="#" class="section-tab">
+        <a href="/Diary/Index" class="section-tab">
             <h3>Diary</h3>
             <p>Using your own personal diary gives you the opportunity to log your every meal and thus gaining a broader peek at your eating habbits. This is very important in uderstanding where your diet leads you in the long term. Some of the functions include:</p>
             <ul>
@@ -22,7 +22,7 @@
                 <li>- Periodic statistics and more..</li>
             </ul>
         </a>
-        <a href="#" class="section-tab">
+        <a href="/Articles/Index" class="section-tab">
             <h3>Articles</h3>
             <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
             <ul>
@@ -31,7 +31,7 @@
                 <li>- Lifestyle</li>
             </ul>
         </a>
-        <a href="#" class="section-tab">
+        <a href="/Knowledge/Index" class="section-tab">
             <h3>Knowledge Base</h3>
             <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
             <ul>
