--- a/Foody.Web/wwwroot/css/menu.scss
+++ b/Foody.Web/wwwroot/css/menu.scss
@@ -253,6 +253,7 @@
         background-color: #f8f8f8;
         padding: 0.6em;
         align-items: center;
+        cursor: pointer;
 
 
         & p {
